--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8080
+
 spring:
   security:
     oauth2:
@@ -6,3 +9,11 @@ spring:
           smartthings:
             client-id: ${SMARTTHINGS_CLIENT_ID}
             client-secret: ${SMARTTHINGS_CLIENT_SECRET}
+            authorization-grant-type: authorization_code
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+            scope: r:devices:x:devices
+        provider:
+          smartthings:
+            authorization-uri: https://auth-global.api.smartthings.com/oauth/authorize
+            token-uri: https://auth-global.api.smartthings.com/oauth/token
+            user-info-uri: https://api.smartthings.com/v1/devices
